--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/ favicon.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="redketchup/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="redketchup/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="redketchup/favicon-16x16.png">
+    <link rel="manifest" href="redketchup/site.webmanifest">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Raghuvar | Portfolio</title>
   </head>
